# raajadharma-xthread-immutable-log

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: validate-yaml.yml
docs/: COMMUNITY_THREAD_SETUP.md
docs/guides/: archer.md  coach.md  contributor.md  governor.md
examples/: example_usage.py
examples/integration/: README.md
examples/integration/backend/: app.py  group_manager.py  requirements.txt
examples/integration/frontend/: app.js  index.html  style.css
scripts/: append_only_yaml.py  cli.py  generate_diff_screenshot.py  generate_pdf.py  post_to_community.py  validate_yaml.py
templates/: pinned_post_template.txt  tweet_template.txt
tests/: test_append_only_yaml.py  test_validate_yaml.py
tests/integration/: conftest.py  test_backend_api.py
yaml/: raajadharma-log.yaml  studio_sattra.json  studio_script.json  studio_users.json
